[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/UI/smallPanel.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/ResourceBars/MPBarUnder.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/ResourceBars/MPBar.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/ResourceBars/HPBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/ResourceBars/HPBarOver.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/ResourceBars/HPBarUnder.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/CharacterPortraits/NoblePortrait.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/ResourceBars/MPBarOver.png" type="Texture" id=8]
[ext_resource path="res://UI/Panels/CharacterPanel.gd" type="Script" id=9]
[ext_resource path="res://Assets/Geronideregulardemo-AL5n7.otf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="CharacterPanel" type="NinePatchRect"]
margin_right = 184.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_vertical = 4
texture = ExtResource( 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_right = 184.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer"]
margin_right = 33.0
margin_bottom = 43.0
rect_min_size = Vector2( 33, 0 )

[node name="Portrait" type="TextureRect" parent="MarginContainer2/HBoxContainer/PortraitContainer"]
margin_right = 33.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceBarContainers" type="MarginContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 37.0
margin_right = 119.0
margin_bottom = 43.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/ResourceBarContainers"]
margin_right = 82.0
margin_bottom = 43.0
rect_min_size = Vector2( 82, 0 )
size_flags_horizontal = 11

[node name="HealthBar" type="TextureProgress" parent="MarginContainer2/HBoxContainer/ResourceBarContainers/VBoxContainer"]
margin_right = 82.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 20.0
value = 15.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="ManaBar" type="TextureProgress" parent="MarginContainer2/HBoxContainer/ResourceBarContainers/VBoxContainer"]
margin_top = 23.0
margin_right = 82.0
margin_bottom = 43.0
size_flags_horizontal = 9
size_flags_vertical = 11
texture_under = ExtResource( 2 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceAmounts" type="VBoxContainer" parent="MarginContainer"]
margin_left = 119.0
margin_top = 8.0
margin_right = 174.0
margin_bottom = 44.0
size_flags_horizontal = 10
theme = SubResource( 2 )

[node name="Health" type="Label" parent="MarginContainer/ResourceAmounts"]
margin_right = 55.0
margin_bottom = 12.0
size_flags_horizontal = 10
custom_constants/line_spacing = 0
text = "999/999"

[node name="Mana" type="Label" parent="MarginContainer/ResourceAmounts"]
margin_left = 12.0
margin_top = 16.0
margin_right = 55.0
margin_bottom = 28.0
grow_horizontal = 0
size_flags_horizontal = 10
text = "100/110"
